# async-trait

./: .travis.yml  Cargo.toml  README.md  README.tpl  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: args.rs  bound.rs  expand.rs  lib.rs  lifetime.rs  parse.rs  receiver.rs  respan.rs
tests/: hygiene.rs  no_std.rs  test.rs
tests/ui/: arg-implementation-detail.rs  arg-implementation-detail.stderr  attr-in-sync-method.rs  attr-in-sync-method.stderr  bare-trait-object.rs  bare-trait-object.stderr  consider-restricting.rs  consider-restricting.stderr  delimiter-span.rs  delimiter-span.stderr  duplicate-method-attributes.rs  duplicate-method-attributes.stderr  elided-new.rs  elided-new.stderr  future-is-nonsense.rs  future-is-nonsense.stderr  invalid-method-attributes.rs  invalid-method-attributes.stderr  issue-93828.rs  issue-93828.stderr  lifetime-defined-here.rs  lifetime-defined-here.stderr  lifetime-span.rs  lifetime-span.stderr  method-attr-outside-async-trait.rs  method-attr-outside-async-trait.stderr  missing-async-in-impl.rs  missing-async-in-trait.rs  missing-body.rs  missing-body.stderr  missing-send-attr-in-impl.rs  missing-send-attr-in-impl.stderr  missing-send-attr-in-trait.rs  missing-send-attr-in-trait.stderr  multiple-method-attr-errors.rs  multiple-method-attr-errors.stderr  must-use.rs  must-use.stderr  no-attribute-macro.rs  no-attribute-macro.stderr  (+15 more)
