[package]
name = "async-trait"
version = "0.1.52"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
rust-version = "1.39"
license = "MIT OR Apache-2.0"
description = "Type erasure for async trait methods"
repository = "https://github.com/dtolnay/async-trait"
documentation = "https://docs.rs/async-trait"
readme = "README.md"
keywords = ["async"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.61", features = ["full", "visit-mut"] }

[dev-dependencies]
futures = "0.3"
rustversion = "1.0"
tracing = "0.1.14"
tracing-attributes = "0.1.14"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
