[package]
name = "async-trait-fn"
version = "0.1.61"
authors = ["David Tolnay <dtolnay@gmail.com>", "wvwwvwwv <wvwwvwwv@me.com>"]
categories = ["asynchronous", "no-std"]
description = "A fork of async-trait with some useful options"
documentation = "https://docs.rs/async-trait-fn"
edition = "2018"
keywords = ["async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/async-trait-fn"
rust-version = "1.39"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.96", features = ["full", "visit-mut"] }

[dev-dependencies]
futures = "0.3"
rustversion = "1.0"
tracing = "0.1.14"
tracing-attributes = "0.1.14"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
