[package]
name = "async-trait-fn"
description = "A fork of async-trait with useful additional features"
version = "0.1.74"
authors = ["David Tolnay <dtolnay@gmail.com>", "wvwwvwwv <wvwwvwwv@me.com>"]
categories = ["asynchronous", "no-std"]
edition = "2021"
keywords = ["async"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wvwwvwwv/async-trait-fn"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full", "visit-mut"] }

[dev-dependencies]
futures = "0.3.28"
rustversion = "1.0.13"
tracing = "0.1.37"
tracing-attributes = "0.1.26"
trybuild = { version = "1.0.81", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
